objects/Test_Drive__c.object
<CustomObject>
    <description>Test Drive related to a Buyer Opportunity</description>
    <fields>
        <fullName>Base_Deal_ID__c</fullName>
        <label>Base Deal ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Enthusiast_ID__c</fullName>
        <label>Base Enthusiast ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Scheduled_By__c</fullName>
        <label>Base Scheduled By</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canceled_Reason__c</fullName>
        <label>Canceled Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Below $250 Shift Margin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car already sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car in shop/not working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car on deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer bought another car (not with Shift)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer bought another car (with Shift)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer no longer interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shift Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switched interest to another Shift car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing issue on customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing issue on Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weather</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chance_To_Win__c</fullName>
        <label>Chance To Win</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Calendar_Notes__c</fullName>
        <label>Customer Experience Calendar Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Departs_At__c</fullName>
        <description>Date/time when a car needs to leave the hub</description>
        <inlineHelpText>Date/time when a car needs to leave the hub</inlineHelpText>
        <label>Departs At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Detailing_Status__c</fullName>
        <label>Detailing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Claimed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Key Ready, Prep Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find Key or Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Driver_Assist_By_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Driver Assist By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Drives2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_At__c</fullName>
        <description>Time at which this object was migrated</description>
        <label>Migrated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Source_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Base object from which this object was migrated.</description>
        <label>Migration Source ID</label>
        <referenceTo>Migration_Source__c</referenceTo>
        <relationshipLabel>Test Drives</relationshipLabel>
        <relationshipName>Test_Drives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <picklist>
            <picklistValues>
                <fullName>CE - Apply For Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Email Requested Information To Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Schedule Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX - Schedule Another Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Recommend Another Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Follow Up In Two Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Follow Up In One Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Follow Up In Two Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Follow Up In Four Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Follow Up In Three Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Follow Up When Vehicle Repaired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>- How did the test drive go?
- Did they commit to buying? If not, what were their objections?
- What is the action plan to get them into a car they want</inlineHelpText>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Time_Requested__c</fullName>
        <label>Original Time Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_By_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Drives1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_By_Text__c</fullName>
        <formula>Scheduled_By_ID__r.FirstName &amp; &quot; &quot; &amp;  Scheduled_By_ID__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled By Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_For__c</fullName>
        <label>Scheduled For</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Selected_Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Test_Drive_By_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Drive By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Drives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Drive_By_Text__c</fullName>
        <formula>Test_Drive_By_ID__r.FirstName &amp; &quot; &quot; &amp;  Test_Drive_By_ID__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Drive By Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Drive_Follow_Up_Results__c</fullName>
        <label>Test Drive Follow Up Results</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Drive_Lost_Reason__c</fullName>
        <label>Test Drive Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Bought Another Vehicle - Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought Another Vehicle - Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought Another Vehicle - Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Sold To Another Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Like Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing - Low Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Financing Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Listing Inaccuracy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Customer Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price - Cannot Afford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price - Overpriced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Still Shopping</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Drive_Outcome__c</fullName>
        <label>Test Drive Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Drive_Pushed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Drive Pushed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Drive_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Drive Survey</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shift_Survey__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Test Drive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shift_Survey__c</referenceTo>
        <relationshipLabel>Test Drives</relationshipLabel>
        <relationshipName>Test_Drives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Interest_ID__c</fullName>
        <label>Vehicle Interest</label>
        <referenceTo>Vehicle_Interest__c</referenceTo>
        <relationshipLabel>Test Drives</relationshipLabel>
        <relationshipName>Test_Drives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Drive</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Test Drive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Drives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Disallow_Test_Drive_When_Coming_Soon</fullName>
        <active>false</active>
        <errorConditionFormula>Vehicle_Interest_ID__r.Vehicle_ID__r.Coming_Soon__c = TRUE &amp;&amp;  ISNEW()</errorConditionFormula>
        <errorMessage>Test Drive cannot be booked. Vehicle is coming soon.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_Test_Drive_When_Sale_Pending</fullName>
        <active>true</active>
        <errorConditionFormula>Vehicle_Interest_ID__r.Vehicle_ID__r.Sale_Pending__c = True &amp;&amp; ISNEW()</errorConditionFormula>
        <errorMessage>Test Drive cannot be booked. Vehicle is sale pending.</errorMessage>
    </validationRules>
</CustomObject>